--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,16 @@
 }
 
 :root {
-  --color-primary: rgb(51, 51, 51);
+  --color-primary: rgb(204, 68, 68);
   --color-secondary: #f6f6f6;
-  --font-family: system-ui;
+  --font-family: "Orbitron", sans-serif;
 }
 
 body {
   font-family: var(--font-family);
   color: var(--color-primary);
   padding: 20px;
+  background-color: #4a5a65;
 }
 
 main {
@@ -28,5 +29,126 @@ main {
 }
 
 .title {
-  padding: 10px 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 2rem;
+  font-size: 3rem;
+  margin-bottom: 2rem;
+  text-transform: uppercase;
+  font-family: "Orbitron", sans-serif;
+  -webkit-text-stroke: 2px #ffff00; /* Yellow border around the text */
+  color: #00b5e2;
+}
+.search-bar-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 2rem;
+}
+
+.search-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #b1f26d; /* Bright, Rick and Morty Green */
+  padding: 10px;
+  border-radius: 5px;
+  width: 50%;
+  max-width: 600px;
+}
+
+.search-bar__input {
+  width: 80%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  background-color: #3b1f64;
+  color: #d3a39d;
+}
+
+.search-bar__button {
+  background-color: #00bfff; /* Sky blue color */
+  border: none;
+  padding: 8px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.search-bar__button:hover {
+  background-color: #00ff00;
+  transform: scale(1.05);
+  box-shadow: 0 6px 16px #00d746;
+}
+
+.card-container {
+  display: grid;
+  gap: 1rem;
+  padding: 0 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.card {
+  background-color: #00b5e2;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
+  font-family: "Orbitron", sans-serif;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 16px #00e64d;
+}
+
+.card__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-bottom: 5px solid #00e64d;
+  transition: opacity 0.3s ease;
+}
+
+.card__title {
+  font-size: 1.5rem;
+  color: #ffff00;
+  margin-bottom: 0.5rem;
+  font-family: "Orbitron", sans-serif;
+}
+
+.card__info-title {
+  font-weight: bold;
+  color: #3b1f64;
+  margin-bottom: 0.2rem;
+}
+
+.navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.navigation button {
+  padding: 10px 15px;
+  background-color: #b1f26d; /* Same Rick and Morty Green */
+  border: none;
+  border-radius: 5px;
+  color: #333;
+  cursor: pointer;
+  margin: 0 10px;
+  font-size: 1rem;
+}
+
+.navigation button:hover {
+  background-color: #00ff00;
+  transform: scale(1.05);
+  box-shadow: 0 6px 16px #00d746;
+}
+
+.navigation__pagination {
+  font-size: 1.2rem;
+  color: #ffff00;
+  font-family: "Orbitron", sans-serif;
 }
