--- a/styles.css
+++ b/styles.css
@@ -49,13 +49,14 @@ main {
 
 .search-bar {
   display: flex;
-  justify-content: space-between;
+  justify-content:space-around;
   align-items: center;
   background-color: #b1f26d; /* Bright, Rick and Morty Green */
   padding: 10px;
   border-radius: 5px;
-  width: 50%;
+  width: 40%;
   max-width: 600px;
+  padding-left: 10px;
 }
 
 .search-bar__input {
@@ -66,6 +67,7 @@ main {
   font-size: 1rem;
   background-color: #3b1f64;
   color: #d3a39d;
+  padding
 }
 
 .search-bar__button {
@@ -74,6 +76,8 @@ main {
   padding: 8px;
   border-radius: 5px;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
 }
 .search-bar__button:hover {
   background-color: #00ff00;
