--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
 @import "components/NavButton/NavButton.css";
 @import "components/NavPagination/NavPagination.css";
 
+@use postcss-nested;
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -28,23 +30,44 @@ main {
   gap: 10px;
 }
 
+
 .title {
-  display: flex;
-  justify-content: center;
+  position:absolute;
   width: 100%;
-  margin-bottom: 2rem;
-  font-size: 3rem;
-  margin-bottom: 2rem;
-  text-transform: uppercase;
-  font-family: "Orbitron", sans-serif;
-  -webkit-text-stroke: 2px #ffff00; /* Yellow border around the text */
-  color: #00b5e2;
+  text-align: center;
+  font-family: 'Get Schwifty';
+  font-size: 5em;
+  color: #08BAE3;
+  z-index: 50;
+  -webkit-text-stroke: 1px rgba(0,0,0,0.5);
+  span {
+    font-size: 0.5em;
+  }
+
 }
+
+.title.middle {
+  -webkit-text-stroke: 0.1em #FFF765;
+  z-index: 49;
+}
+
+.title.bottom {
+  -webkit-text-stroke: 0.4em black;
+  z-index: 48;
+}
+
+@font-face {
+  font-family: 'Get Schwifty';
+
+src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/3089507/get-schwifty.woff') format('woff');
+}
+
 .search-bar-container {
   display: flex;
   justify-content: center;
   width: 100%;
-  margin-bottom: 2rem;
+  margin-bottom: rem;
+  margin-top: 8rem
 }
 
 .search-bar {
@@ -91,6 +114,8 @@ main {
   padding: 0 20px;
   max-width: 1200px;
   margin: 0 auto;
+  margin-top: 1rem;
+
 }
 .card {
   background-color: #00b5e2;
@@ -99,6 +124,7 @@ main {
   overflow: hidden;
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
   font-family: "Orbitron", sans-serif;
+  
 }
 
 .card:hover {
